Fixing big with footer overflow and trying to fix mobile stuck bug

--- a/src/components/features/background/background.css
+++ b/src/components/features/background/background.css
@@ -1,6 +1,6 @@
 .color-bends-container {
   position: absolute;
-  top: -20vh;
+  top: 0;
   left: 0;
   width: 100%;
   height: 150vh;
